--- a/style.css
+++ b/style.css
@@ -129,11 +129,34 @@ a {
     margin-left: 36.5em;
 }
 
+.footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+
+.call-to-action {
+    display: flex;
+    background: #3882f6;
+    color: #e5e7eb;
+
+}
+
+.copyright {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #1f2937;
+    color: #e5e7eb;
+    padding: 25px;
+}
 
 
 .sign-up {
     background: #3882f6;
-    border: none;
+    border: 2px  solid #f9faf8;
     border-radius: 8px;
     padding: 8px 16px;
     width: 100px;
