--- a/style.css
+++ b/style.css
@@ -132,16 +132,27 @@ a {
 .footer {
     display: flex;
     justify-content: center;
-    align-items: center;
-    
-    
+    align-items: center;   
+}
+
+.action,
+.action-subtext {
+    margin: 0;
 }
 
 .call-to-action {
     display: flex;
-    background: #3882f6;
+    justify-content: space-between;
+    background-color: #3882f6;
     color: #e5e7eb;
+    border-radius: 6px;
+    padding: 50px 65px;
+    margin-top: 30px;
+    margin-bottom: 30px;
+}
 
+.footer-sub {
+    margin-right: 60px;
 }
 
 .copyright {
